--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                           <h4 class="card-title"><strong>Dvid Martin</strong></h4>
                           <p class="card-text d-none d-sm-block">Phasellus vehicula justo eget diam posuere sollicitudin eu tincidunt nulla.</p>
                           <a href="#" class="btn-fb"><i class="fa fa-facebook"></i></a>
-                          <a href="#" class="btn-tw m-md-2"><i class="fa fa-twitter"></i></a>
+                          <a href="#" class="btn-tw mt-2 m-lg-2  m-md-1"><i class="fa fa-twitter"></i></a>
                           <a href="#" class="btn-linkedin"><i class="fa fa-linkedin"></i></a>
                       </div>
                   </div>
